# Bevy-MiniGolf

./: .gitignore  Cargo.toml  README.md  game_data.db
assets/: cube_blue.glb  cube_terracotta.glb  cube_toxic.glb
assets/blend_files/: basic_ball.blend  basic_ball.blend1  basic_cup.blend  basic_cup.blend1  basic_cup.blend11  basic_level_1.blend  basic_level_1.blend1  basic_level_1.glb  basic_level_10.blend  basic_level_11.blend  basic_level_11.blend1  basic_level_12.blend  basic_level_12.blend1  basic_level_13.blend  basic_level_13.blend1  basic_level_14.blend  basic_level_15.blend  basic_level_17.blend  basic_level_17.blend1  basic_level_18.blend  basic_level_18.blend1  basic_level_2.blend  basic_level_2.blend1  basic_level_3.blend  basic_level_3.blend1  basic_level_4.blend  basic_level_4.blend1  basic_level_5.blend  basic_level_5.blend1  basic_level_6.blend  basic_level_6.blend1  basic_level_7.blend  basic_level_7.blend1  basic_level_8.blend  basic_level_8.blend1  basic_level_9.blend  basic_level_9.blend1  basic_start.blend  basic_start.blend1  boilerplate level 1.blend  (+28 more)
assets/glb/: basic_ball.glb  basic_cup.glb  basic_level_1.glb  basic_start.glb  boilerplate_level.glb  boilerplate_level_1.glb  boilerplate_level_10.glb  boilerplate_level_11.glb  boilerplate_level_12.glb  boilerplate_level_13.glb  boilerplate_level_14.glb  boilerplate_level_15.glb  boilerplate_level_16.glb  boilerplate_level_17.glb  boilerplate_level_18.glb  boilerplate_level_2.glb  boilerplate_level_3.glb  boilerplate_level_4.glb  boilerplate_level_5.glb  boilerplate_level_6.glb  boilerplate_level_7.glb  boilerplate_level_8.glb  boilerplate_level_9.glb  boilerplate_level_tutorial.glb  main_menu.glb
assets/scenes/: load_scene_example-new.scn.ron  load_scene_example.scn.ron
spreadsheets/: game_handler_map.csv  honey_dew.csv  minigolf.csv  purge_handler_map.csv  run_trigger_map.csv
src/: database_handler.rs  game_handler.rs  lib.rs  main.rs  minigolf.csv  network_handler.rs
src/level_handler/: golf_ball_handler.rs  level_handler.rs  mod.rs  physics_handler.rs
src/player_handler/: leader_board_handler.rs  mod.rs  party_handler.rs  (+1 more)
(+45 files in other folders)
