[package]
name = "minigolf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14.2", features = ["mp3"]}
bevy_mod_raycast = "0.18.0"
bevy_editor_pls = "0.9"
bevy_render = "0.14.2"
bevy_rapier3d = "0.27.0"
bevy_matchbox = "0.10"
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.0", features = ["full"] } 
bevy-tokio-tasks = "0.14.0"
# uuid = "1.11.0" <- Covered below in dependencies.uuid

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",                # Lets you generate random UUIDs intended for db generated via Unix timestamp
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
